--- a/отчёт.md
+++ b/отчёт.md
@@ -1,1 +1,30 @@
-# AVS_DZ4
+*Багрянский Константин Дмитриевич*  
+**БПИ218 Вариант 1**
+
+*Условие:*  
+Задача о парикмахере. В тихом городке есть парикмахерская. Салон парикмахерской мал, работать в нем нем может только один парикмахер, обслуживающий одного посетителя. Есть несколько кресел для ожидания в очереди. Парикмахер всю жизнь обслуживает посетителей. Когда в салоне никого нет, он спит в кресле. Когда посетитель приходит и видит спящего парикмахера, он будет его, садится в кресло, «засыпая» на тот момент, пока парикмахер обслуживает его. Если посетитель приходит, а парикмахер занят, то он
+встает в очередь и «засыпает». После стрижки парикмахер сам провожает посетителя. Если есть ожидающие посетители, то парикмахер будит одного из
+них и ждет пока тот сядет в кресло парикмахера и начинает стрижку. Если
+никого нет, он снова садится в свое кресло и засыпает до прихода посетителя.  
+*Задача:*  
+Создать многопоточное приложение, моделирующее рабочий день парикмахерской.  
+*Решение:*  
+Для решения задачи будем пользоваться симофорами для синхронизации работы
+потоков, у которых есть доступ к общему ресурсу.
+По условию, парикмахер спит, когда нет клиентов, клиент приходит, парикмахер просыпается и стрижёт его.  
+Когда парикмахер постриг посетителя, он его провожает до выхода, будит следующего и стрижет.
+В решении это регулируется с помощью генерации случайного кол-ва времени между приходами клиентов и времени работы парикмахера в промежутке от 0 до 5 секунд   
+  
+Программа получает на вход число клиентов [1; 20].  
+После этого программа пораждает этих самых клиентов в случайном интервале [0; 5] секунд друг за другом.   
+Если клиент приходит, когда парикмахер кого-то стрижёт, то он засыпает, ожидая своей очереди.  
+Парикмахер с свою очередь засыпает если клиентов нет или стрижёт их одним за другим.  
+
+Тесты:  
+Входные данные:  
+5  
+Данный тест отработал 2 раза, поскольку время работы парикмахера и интервал между клиентами случайные величины, то результаты разняться.  
+При первом запуске парикмахер закончил стрич первого клиента до того, как пришёл второй, поэтому парикмахер отправился спать.  
+При втором запуске 2 клиент пришёл раньше, чем парикмахер закончил и поэтому лёг спать, ожидая парикмахера.  
+![alt text](pics/test1.jpg)
+![alt text](pics/test2.jpg)
