--- a/отчёт.md
+++ b/отчёт.md
@@ -26,5 +26,5 @@
 Данный тест отработал 2 раза, поскольку время работы парикмахера и интервал между клиентами случайные величины, то результаты разняться.  
 При первом запуске парикмахер закончил стрич первого клиента до того, как пришёл второй, поэтому парикмахер отправился спать.  
 При втором запуске 2 клиент пришёл раньше, чем парикмахер закончил и поэтому лёг спать, ожидая парикмахера.  
-![alt text](pics/test1.jpg)
-![alt text](pics/test2.jpg)
+![alt text](part1/test1.jpg)
+![alt text](part2/test2.jpg)
