--- a/отчёт.md
+++ b/отчёт.md
@@ -8,6 +8,9 @@
 никого нет, он снова садится в свое кресло и засыпает до прихода посетителя.  
 *Задача:*  
 Создать многопоточное приложение, моделирующее рабочий день парикмахерской.  
+
+**Оценка 4** папка part1  
+
 *Решение:*  
 Для решения задачи будем пользоваться симофорами для синхронизации работы
 потоков, у которых есть доступ к общему ресурсу.
@@ -27,4 +30,4 @@
 При первом запуске парикмахер закончил стрич первого клиента до того, как пришёл второй, поэтому парикмахер отправился спать.  
 При втором запуске 2 клиент пришёл раньше, чем парикмахер закончил и поэтому лёг спать, ожидая парикмахера.  
 ![alt text](part1/test1.jpg)
-![alt text](part2/test2.jpg)
+![alt text](part1/test2.jpg)
