--- a/отчёт.md
+++ b/отчёт.md
@@ -9,7 +9,7 @@
 *Задача:*  
 Создать многопоточное приложение, моделирующее рабочий день парикмахерской.  
 
-**Оценка 4** папка part1  
+**Оценка 6** папка part1  
 
 *Решение:*  
 Для решения задачи будем пользоваться симофорами для синхронизации работы
@@ -18,7 +18,7 @@
 Когда парикмахер постриг посетителя, он его провожает до выхода, будит следующего и стрижет.
 В решении это регулируется с помощью генерации случайного кол-ва времени между приходами клиентов и времени работы парикмахера в промежутке от 0 до 5 секунд   
   
-Программа получает на вход число клиентов [1; 20].  
+Программа получает на вход число клиентов [1; 100].  
 После этого программа пораждает этих самых клиентов в случайном интервале [0; 5] секунд друг за другом.   
 Если клиент приходит, когда парикмахер кого-то стрижёт, то он засыпает, ожидая своей очереди.  
 Парикмахер с свою очередь засыпает если клиентов нет или стрижёт их одним за другим.  
@@ -31,3 +31,14 @@
 При втором запуске 2 клиент пришёл раньше, чем парикмахер закончил и поэтому лёг спать, ожидая парикмахера.  
 ![alt text](part1/test1.jpg)
 ![alt text](part1/test2.jpg)
+
+
+В программу добавлены комментарии, поясняющие выполняемые действия и описание используемых переменных.  
+
+В решении существуют такие сущности как парикмахер, клиент, очередь.  
+Парикмахер - функция, ожидающая клиента и обслуживающая его.  
+Клиент - функция, ожидающая, пока парикмахер её обслужит.  
+Когда парикмахер свободен, симофор пропускает клиента. Если клиентов нет, то парикмахер ждёт.  
+Клиент, в свою очередь, спит, пока парикмахер работает, потом через симафор сообщает парикмахеру что его можно принять.  
+Если парикмахер свободен, то он берёт клиента, сообщившего что он свободен и через симафор сообщает, что он занят.  
+После того, как парикмахер обслужил клиента, он удаляет его из очереди и ждёт следующего клиента.  
