--- a/отчёт.md
+++ b/отчёт.md
@@ -18,10 +18,19 @@
 Когда парикмахер постриг посетителя, он его провожает до выхода, будит следующего и стрижет.
 В решении это регулируется с помощью генерации случайного кол-ва времени между приходами клиентов и времени работы парикмахера в промежутке от 0 до 5 секунд   
   
-Программа получает на вход число клиентов [1; 100].  
+Программа получает на вход число клиентов [1; 100] через консоль либо командную строку.  
 После этого программа пораждает этих самых клиентов в случайном интервале [0; 5] секунд друг за другом.   
 Если клиент приходит, когда парикмахер кого-то стрижёт, то он засыпает, ожидая своей очереди.  
 Парикмахер с свою очередь засыпает если клиентов нет или стрижёт их одним за другим.  
+В программу добавлены комментарии, поясняющие выполняемые действия и описание используемых переменных. 
+
+В решении существуют такие сущности как парикмахер, клиент, очередь.  
+Парикмахер - функция, ожидающая клиента и обслуживающая его.  
+Клиент - функция, ожидающая, пока парикмахер её обслужит.  
+Когда парикмахер свободен, симофор пропускает клиента. Если клиентов нет, то парикмахер ждёт.  
+Клиент, в свою очередь, спит, пока парикмахер работает, потом через симафор сообщает парикмахеру что его можно принять.  
+Если парикмахер свободен, то он берёт клиента, сообщившего что он свободен и через симафор сообщает, что он занят.  
+После того, как парикмахер обслужил клиента, он удаляет его из очереди и ждёт следующего клиента.  
 
 Тесты:  
 Входные данные:  
@@ -33,12 +42,22 @@
 ![alt text](part1/test2.jpg)
 
 
-В программу добавлены комментарии, поясняющие выполняемые действия и описание используемых переменных.  
+ 
 
-В решении существуют такие сущности как парикмахер, клиент, очередь.  
-Парикмахер - функция, ожидающая клиента и обслуживающая его.  
-Клиент - функция, ожидающая, пока парикмахер её обслужит.  
-Когда парикмахер свободен, симофор пропускает клиента. Если клиентов нет, то парикмахер ждёт.  
-Клиент, в свою очередь, спит, пока парикмахер работает, потом через симафор сообщает парикмахеру что его можно принять.  
-Если парикмахер свободен, то он берёт клиента, сообщившего что он свободен и через симафор сообщает, что он занят.  
-После того, как парикмахер обслужил клиента, он удаляет его из очереди и ждёт следующего клиента.  
+**Оценка 7** папка part2  
+
+В программу добавлены ввод данных из файла и вывод результатов в файл.  
+Так же добавлен мьютекс для блокировки потока вывода во избежании нарушении при выводе данных.  
+Файлы указываются опционально в коммандной строке.  
+Предыдущий функционал программы тоже работает.  
+Добавлены тестовые файлы и файлы с результатами работы программы в папку part2.  
+
+***Оценка 8* папка part3  
+
+В программу добавлена генерация случайных данных в допустимых диапазонах.
+Теперь на вход требуется:
+n - кол-во клиентов [1, 100]
+t1 - максимальное время в секундах которое парикмахер потратит на каждую стрижку [1, 1000].
+t2 - максимальный интервал в секундах между приходом клиентов [1, 1000].
+Результат работы функции rand() делится с остатком на t1 и t2 высчитывая время в случайном диапазоне [0, t]
+Ввод данных из командной строки расширен с учетом введенных изменений.
