--- a/отчёт.md
+++ b/отчёт.md
@@ -57,7 +57,8 @@
 В программу добавлена генерация случайных данных в допустимых диапазонах.
 Теперь на вход требуется:
 n - кол-во клиентов [1, 100]
-t1 - максимальное время в секундах которое парикмахер потратит на каждую стрижку [1, 1000].
-t2 - максимальный интервал в секундах между приходом клиентов [1, 1000].
-Результат работы функции rand() делится с остатком на t1 и t2 высчитывая время в случайном диапазоне [0, t]
-Ввод данных из командной строки расширен с учетом введенных изменений.
+t1 - максимальное время в секундах которое парикмахер потратит на каждую стрижку [1, 1000].  
+t2 - максимальный интервал в секундах между приходом клиентов [1, 1000].  
+Результат работы функции rand() делится с остатком на t1 и t2 высчитывая время в случайном диапазоне [0, t]  
+Ввод данных из командной строки расширен с учетом введенных изменений.  
+Добавлены тестовые файлы и файлы с результатами работы программы в папку part3.  
